# risos-fork

./: .gitignore  README.md  pyproject.toml
.github/workflows/: generate-feeds.yml
sites/: conjur-lenio-streck.yaml  folha-glenn-greenwald.yaml  hacker-news.yaml  poder360-itcmd.yaml  vaultara-reports.yaml
src/risos/: __main__.py  generator.py  models.py  runner.py  scraper.py  transforms.py
tests/: conftest.py  test_generator.py  test_models.py  test_runner.py  test_scraper.py  test_transforms.py
tests/fixtures/: hacker-news.html
